scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,33 @@
 /* General css */
 ::-webkit-scrollbar {
     width: 16px;
-    z-index: -1;
+    height: 90vh;
+    position: fixed;
+    bottom: 0;
+    margin-top: 80px;
 }
 
 ::-webkit-scrollbar-track {
     background-color: unset;
+    margin-top: 80px;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 8px;
-  border: 3px solid transparent;
-   background-clip: content-box;
+    border: 3px solid transparent;
+    background-clip: content-box;
     background-color: white;
-    z-index: -1;
+}
+
+html{
+    overflow: hidden;
 }
 
 body {
-    margin: 15vw 10vw;
+    overflow-y: scroll; 
+    padding: 15vw 10vw;
+    height: 100vh;
+    box-sizing: border-box;
     font-family: sans-serif;
     font-weight: normal;
     font-style: normal;
@@ -25,7 +35,7 @@ body {
     position: relative;
     max-width: 1500px;
     color: #040303;
-    background-color: white;
+    background-color: white; 
 }
 
 #loading{
